--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -16,22 +16,43 @@ ul {
 }
 
 .navTop-banner {
+  @include layout-margin;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 100%;
-  height: 100%;
+  height: 3.75rem;
   background-color: $col-dark;
-  padding-inline: 2rem;
 
   @include bp-sm {
-    padding-left: 150px;
-    padding-right: 0;
+    height: 95px;
   }
-}
-.navTop-banner img {
-  width: 60px;
-  height: auto;
+
+  &__logo {
+    .open & {
+      opacity: 1;
+      & svg {
+        opacity: 0;
+        transition: all 0.4s ease-out;
+        transform: translateX(-100px);
+        -webkit-transform: translateX(-100px);
+        -moz-transform: translateX(-100px);
+        -ms-transform: translateX(-100px);
+        -o-transform: translateX(-100px);
+        -webkit-transition: all 0.4s ease-out;
+        -moz-transition: all 0.4s ease-out;
+        -ms-transition: all 0.4s ease-out;
+        -o-transition: all 0.4s ease-out;
+      }
+    }
+    & svg {
+      width: 1.875rem;
+      height: 1.875rem;
+      @include bp-sm {
+        width: 4.125rem;
+        height: 3rem;
+      }
+    }
+  }
 }
 
 .banner__util {
@@ -40,6 +61,7 @@ ul {
   justify-content: space-between;
   width: 100%;
   padding-top: 0.94rem;
+  @include layout-margin;
 
   @include bp-sm {
     padding-top: 2.44rem;
@@ -91,34 +113,25 @@ ul {
   &-close {
     display: grid;
     place-items: center;
-    padding-right: 2rem;
-
-    @include bp-sm {
-      padding-right: 9.7rem;
-    }
   }
 
   &-logo {
     width: 1.875rem;
     height: 1.875rem;
-    padding-left: 2rem;
 
     @include bp-sm {
       width: 4.125rem;
       height: 3rem;
-      padding-left: 9.7rem;
     }
   }
 }
 
 .nav-button {
   background-color: transparent;
-  position: fixed;
+  position: static;
   z-index: 400;
   width: 1.375rem;
   height: 0.75rem;
-  right: 3rem;
-  top: 2.1rem;
   border: none;
   outline: none;
   transition: opacity 0.3s ease-out;
@@ -128,20 +141,24 @@ ul {
   -o-transition: opacity 0.3s ease-out;
 
   @include bp-sm {
-    top: 35px;
-    right: 200px;
     width: 2.6875rem;
     height: 1.25rem;
   }
 
-  &:before {
-    content: url('../assets/icons/hamburger.svg');
-    width: 1.375rem;
-    height: 0.75rem;
-    @include bp-sm {
-      width: 2.6875rem;
-      height: 1.25rem;
-    }
+  & svg {
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    transition: all 0.3s ease-in;
+    transform: translateX(0px);
+    -webkit-transform: translateX(0px);
+    -moz-transform: translateX(0px);
+    -ms-transform: translateX(0px);
+    -o-transform: translateX(0px);
+    -webkit-transition: all 0.3s ease-in;
+    -moz-transition: all 0.3s ease-in;
+    -ms-transition: all 0.3s ease-in;
+    -o-transition: all 0.3s ease-in;
   }
 
   &:active {
@@ -153,18 +170,19 @@ ul {
   }
   .open & {
     opacity: 1;
-    &:before {
+    & svg {
       opacity: 0;
       width: 0;
-    }
-    &:after {
-      opacity: 1;
-      transform: translate3d(0, 0, 0) rotate(360deg);
-      transition: transform 0.3s 1s ease-out, opacity 0.3s 1s ease-out;
-      -webkit-transition: transform 0.3s 1s ease-out, opacity 0.3s 1s ease-out;
-      -moz-transition: transform 0.3s 1s ease-out, opacity 0.3s 1s ease-out;
-      -ms-transition: transform 0.3s 1s ease-out, opacity 0.3s 1s ease-out;
-      -o-transition: transform 0.3s 1s ease-out, opacity 0.3s 1s ease-out;
+      transition: all 0.4s ease-out;
+      transform: translateX(-100px);
+      -webkit-transform: translateX(-100px);
+      -moz-transform: translateX(-100px);
+      -ms-transform: translateX(-100px);
+      -o-transform: translateX(-100px);
+      -webkit-transition: all 0.4s ease-out;
+      -moz-transition: all 0.4s ease-out;
+      -ms-transition: all 0.4s ease-out;
+      -o-transition: all 0.4s ease-out;
     }
   }
 }
@@ -220,11 +238,11 @@ nav {
   a {
     opacity: 0;
     text-align: center;
-    transform: translate3d(0, 36px, 0);
-    -webkit-transform: translate3d(0, 36px, 0);
-    -moz-transform: translate3d(0, 36px, 0);
-    -ms-transform: translate3d(0, 36px, 0);
-    -o-transform: translate3d(0, 36px, 0);
+    transform: translate3d(0, 336px, 0); //36px
+    -webkit-transform: translate3d(0, 336px, 0);
+    -moz-transform: translate3d(0, 336px, 0);
+    -ms-transform: translate3d(0, 336px, 0);
+    -o-transform: translate3d(0, 336px, 0);
     text-transform: capitalize;
     position: relative;
     display: inline-block;
@@ -233,7 +251,6 @@ nav {
     overflow: hidden;
     color: $col-dark;
     -webkit-text-stroke: 1px $col-white;
-
     @include bp-sm {
       font-size: 3.75rem;
       line-height: normal;
@@ -243,7 +260,7 @@ nav {
       opacity: 1;
       transform: translate3d(0, 0, 0);
       transition: transform 0.2s ease-out, opacity 0.2s ease-out;
-      @for $i from 1 to 7 {
+      @for $i from 1 to 5 {
         &:nth-child(#{$i}) {
           transition-delay: $i * 0.1s + 0.65s;
         }
@@ -277,9 +294,14 @@ nav {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 6.69rem;
+    gap: 0.1rem;
+    margin-top: 3.69rem;
     @include bp-sm {
       margin-top: 4.25rem;
+    }
+
+    li {
+      padding-block: 0;
     }
   }
 
@@ -288,10 +310,12 @@ nav {
     align-items: center;
     justify-content: center;
     gap: 1.87rem;
-    margin-top: 8rem;
+    margin-top: 3.5rem;
     @include bp-sm {
-      margin-top: 5.75rem;
       gap: 2.56rem;
+    }
+    @include bp-lg {
+      margin-top: 1.5rem;
     }
     &-icon {
       &:nth-child(1) {
@@ -302,22 +326,22 @@ nav {
           height: 3.125rem;
         }
       }
-      &:nth-child(2) {
-        width: 1.34619rem;
-        height: 1.34619rem;
-        @include bp-sm {
-          width: 1.6875rem;
-          height: 1.6875rem;
-        }
-      }
-      &:nth-child(3) {
-        width: 1.37013rem;
-        height: 1.349rem;
-        @include bp-sm {
-          width: 1.75rem;
-          height: 1.5rem;
-        }
-      }
+      // &:nth-child(2) {
+      //   width: 1.34619rem;
+      //   height: 1.34619rem;
+      //   @include bp-sm {
+      //     width: 1.6875rem;
+      //     height: 1.6875rem;
+      //   }
+      // }
+      // &:nth-child(3) {
+      //   width: 1.37013rem;
+      //   height: 1.349rem;
+      //   @include bp-sm {
+      //     width: 1.75rem;
+      //     height: 1.5rem;
+      //   }
+      // }
     }
   }
 }
@@ -401,8 +425,21 @@ nav {
 
   &__nav {
     width: 100%;
-    height: 95px;
-    // @include flex-space-between;
     align-items: center;
+    background-color: #111111;
   }
+}
+
+.d {
+  opacity: 1;
+  transition: all 0.2s ease-out;
+  transform: translateX(0px);
+  -webkit-transform: translateX(0px);
+  -moz-transform: translateX(0px);
+  -ms-transform: translateX(0px);
+  -o-transform: translateX(0px);
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+  -ms-transition: all 0.2s ease-out;
+  -o-transition: all 0.2s ease-out;
 }
