--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -5,7 +5,7 @@ html:focus-within {
 }
 
 :root {
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 *,
@@ -77,7 +77,20 @@ img:not([alt]) {
   -webkit-filter: grayscale(100%);
 }
 
-.icon {
-  width: 50px;
-  height: 50px;
+// PAGE LAYOUT
+
+.page-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+
+  &__content {
+    flex: 1;
+  }
+
+  &__nav {
+    width: 100%;
+    align-items: center;
+    background-color: #111111;
+  }
 }
