--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,7 +10,7 @@
 @import './components/buttons';
 @import './components/footer';
 @import './components/header';
-@import './components/sidecar';
+@import './components/hero-section';
 
 // HELPERS
 @import './helpers/animations';
@@ -19,4 +19,4 @@
 
 
 // PAGES 
-@import './pages/home';
+// @import './pages/home';
