--- a/src/styles/helpers/_helpers.scss
+++ b/src/styles/helpers/_helpers.scss
@@ -20,40 +20,6 @@
   margin: 0;
 }
 
-.cushion-sm {
-  padding: 2%;
-}
-.cushion-md {
-  padding: 5%;
-}
-.cushion-lg {
-  padding: 10%;
-}
-
-.cushion-v-sm {
-  padding: 2% 0;
-}
-.cushion-v-md {
-  padding: 5% 0;
-}
-.cushion-v-lg {
-  padding: 10% 0;
-}
-
-.cushion-h-sm {
-  padding: 0 2%;
-}
-.cushion-h-md {
-  padding: 0 5%;
-}
-.cushion-h-lg {
-  padding: 0 10%;
-}
-
-.white {
-  color: white !important;
-}
-
 /* ============ Alignment ============ */
 
 .center {
@@ -132,4 +98,15 @@
 }
 .delay-6 {
   animation-delay: 0.6s;
+}
+
+.spacer-dot {
+  background-color: #fe5000;
+  width: 0.25rem;
+  height: 0.25rem;
+  border-radius: 100vh;
+  -webkit-border-radius: 100vh;
+  -moz-border-radius: 100vh;
+  -ms-border-radius: 100vh;
+  -o-border-radius: 100vh;
 }
