added background colour to app

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -92,6 +92,8 @@ img:not([alt]) {
 
   &__content {
     flex: 1;
+    // background-color: #e6e0d4;
+    background-color: #f1ebdd;
   }
 
   &__nav {
