--- a/src/styles/components/_hero-section.scss
+++ b/src/styles/components/_hero-section.scss
@@ -5,12 +5,16 @@
   @include layout-margin;
   align-items: center;
   margin-top: 5.25rem;
-  margin-bottom: 4.19rem;
+  margin-bottom: 2.44rem;
+  padding-bottom: 4.19rem;
 
   @include bp-sm {
-    height: calc(100vh - 195px);
     margin-top: 4.8rem;
-    margin-bottom: 2.12rem;
+    margin-bottom: 2.75rem;
+    padding-bottom: 2.12rem;
+  }
+  @include bp-md {
+    height: calc(100vh - 195px);
   }
 
   @include slideContent;
@@ -83,6 +87,60 @@
     @include bp-sm {
       margin-top: 2.5rem;
       gap: 1.8rem;
+    }
+  }
+
+  &__scroll-down {
+    margin-top: 3.44rem;
+    width: 20px;
+    height: 40px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    background-color: transparent;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 25px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
+    cursor: pointer;
+
+    @include bp-sm {
+      margin-top: 4.13rem;
+    }
+    @include bp-lg {
+      width: auto;
+      height: auto;
+      padding: 1rem 0.5rem;
+    }
+
+    &__dot {
+      width: 6px;
+      height: 6px;
+      border-radius: 100vh;
+      -webkit-border-radius: 100vh;
+      -moz-border-radius: 100vh;
+      -ms-border-radius: 100vh;
+      -o-border-radius: 100vh;
+      background-color: rgba(0, 0, 0, 0.3);
+      position: absolute;
+      top: 2px;
+      animation: scroll-down 1.28s ease-out infinite;
+      -webkit-animation: scroll-down 1.28s ease-out infinite;
+    }
+  }
+
+  &__border {
+    border-bottom: 1px solid $col-brand;
+    width: 65%;
+    text-align: center;
+    margin-top: 4.19rem;
+
+    @include bp-md {
+      width: 45%;
+      margin-top: 2.13rem;
     }
   }
 }
