--- a/src/styles/helpers/_animations.scss
+++ b/src/styles/helpers/_animations.scss
@@ -2,39 +2,165 @@
 // @-moz-keyframes
 // @-webkit-keyframes
 // @-o-keyframes
- 
-@keyframes menu-animation {
+
+@keyframes scroll-down {
+  0% {
+    top: 5px;
+    opacity: 0.5;
+  }
+  25% {
+    top: 10px;
+    opacity: 0.9;
+  }
+  50% {
+    top: 15px;
+    opacity: 1;
+  }
+  100% {
+    top: 27px;
+    opacity: 0.4;
+  }
+}
+@-webkit-keyframes scroll-down {
+  0% {
+    top: 5px;
+    opacity: 0.5;
+  }
+  25% {
+    top: 10px;
+    opacity: 0.9;
+  }
+  50% {
+    top: 15px;
+    opacity: 1;
+  }
+  100% {
+    top: 27px;
+    opacity: 0.4;
+  }
+}
+@-o-keyframes scroll-down {
+  0% {
+    top: 5px;
+    opacity: 0.5;
+  }
+  25% {
+    top: 10px;
+    opacity: 0.9;
+  }
+  50% {
+    top: 15px;
+    opacity: 1;
+  }
+  100% {
+    top: 27px;
+    opacity: 0.4;
+  }
+}
+@media screen and (min-width: 1200px) {
+  @keyframes scroll-down {
     0% {
-      opacity: 0;
-      transform: scale(0.04)
-                 translateY(300%);
+      top: 5px;
+      opacity: 0.5;
     }
-    40% {
-      transform: scale(0.04)
-                 translateY(0);
-      transition: ease-out;
+    25% {
+      top: 10px;
+      opacity: 0.9;
     }
-    40% {
-      transform: scale(0.04)
-                 translateY(0);
-    }
-    60% {
+    50% {
+      top: 15px;
       opacity: 1;
-      transform: scale(0.02)
-                 translateY(0px);
-    }
-    61% {
-      transform: scale(0.04);
-    }
-    99.9% {
-      height: 0;
-      padding-bottom: 100%;
-      border-radius: 100%;
     }
     100% {
-      transform: scale(2);
-      height: 100%;
-      padding-bottom: 0;
-      border-radius: 0;
+      top: 20px;
+      opacity: 0.4;
     }
   }
+
+  @-moz-keyframes scroll-down {
+    0% {
+      top: 5px;
+      opacity: 0.5;
+    }
+    25% {
+      top: 10px;
+      opacity: 0.9;
+    }
+    50% {
+      top: 15px;
+      opacity: 1;
+    }
+    100% {
+      top: 20px;
+      opacity: 0.4;
+    }
+  }
+  @-webkit-keyframes scroll-down {
+    0% {
+      top: 5px;
+      opacity: 0.5;
+    }
+    25% {
+      top: 10px;
+      opacity: 0.9;
+    }
+    50% {
+      top: 15px;
+      opacity: 1;
+    }
+    100% {
+      top: 20px;
+      opacity: 0.4;
+    }
+  }
+  @-o-keyframes scroll-down {
+    0% {
+      top: 5px;
+      opacity: 0.5;
+    }
+    25% {
+      top: 10px;
+      opacity: 0.9;
+    }
+    50% {
+      top: 15px;
+      opacity: 1;
+    }
+    100% {
+      top: 20px;
+      opacity: 0.4;
+    }
+  }
+}
+
+@keyframes menu-animation {
+  0% {
+    opacity: 0;
+    transform: scale(0.04) translateY(300%);
+  }
+  40% {
+    transform: scale(0.04) translateY(0);
+    transition: ease-out;
+  }
+  40% {
+    transform: scale(0.04) translateY(0);
+  }
+  60% {
+    opacity: 1;
+    transform: scale(0.02) translateY(0px);
+  }
+  61% {
+    transform: scale(0.04);
+  }
+  99.9% {
+    height: 0;
+    padding-bottom: 100%;
+    border-radius: 100%;
+  }
+  100% {
+    transform: scale(2);
+    height: 100%;
+    padding-bottom: 0;
+    border-radius: 0;
+  }
+}
