--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 @import './components/footer';
 @import './components/header';
 @import './components/hero-section';
+@import './components/about-me-section';
 
 // HELPERS
 @import './helpers/animations';
