--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -56,15 +56,13 @@
     color: $col-brand;
     font-size: 1rem;
     line-height: 1.625rem;
-    text-transform: capitalize;
     gap: 0.62rem;
 
     &::before {
       content: '';
       position: absolute;
-      width: 0;
+      width: 100%;
       height: 100%;
-      left: 0;
       background-color: rgba(254, 80, 0, 0.1);
       border-radius: 0.3125rem;
       -webkit-border-radius: 0.3125rem;
@@ -76,7 +74,14 @@
       -moz-transition: width 0.4s ease-in-out;
       -ms-transition: width 0.4s ease-in-out;
       -o-transition: width 0.4s ease-in-out;
+
+      @include bp-md {
+        width: 0;
+        height: 100%;
+        left: 0;
+      }
     }
+
     &:hover,
     &:focus {
       &::before {
