mock data for projects, compressed video and image files added with mapping over data to render in featured section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@
 @import './components/header';
 @import './components/hero-section';
 @import './components/about-me-section';
+@import './components/featured-projects-section';
 
 // HELPERS
 @import './helpers/animations';
