--- a/src/styles/components/_featured-projects-section.scss
+++ b/src/styles/components/_featured-projects-section.scss
@@ -27,6 +27,17 @@
     width: 100%;
     padding-top: 3.75rem;
     padding-bottom: 2.5rem;
+    position: relative;
+    transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1),
+      transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+    -webkit-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1),
+      transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+    -moz-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1),
+      transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+    -ms-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1),
+      transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+    -o-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1),
+      transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
     @include bp-sm {
       padding-top: 5rem;
       padding-bottom: 3.75rem;
@@ -36,7 +47,6 @@
       width: 100%;
       max-width: calc(100% - 32px);
       margin: 0 auto;
-      position: relative;
 
       @include bp-sm {
         max-width: calc(100% - 100px);
@@ -48,11 +58,20 @@
         max-width: calc(100% - 500px);
       }
     }
+
+    &:hover .button--black-desktop {
+      transform: translateY(0);
+      -webkit-transform: translateY(0);
+      -moz-transform: translateY(0);
+      -ms-transform: translateY(0);
+      -o-transform: translateY(0);
+      opacity: 1;
+    }
   }
 
   &__media-wrap {
     width: 100%;
-    height: 600px;
+    height: 400px;
     position: relative;
     transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
     -webkit-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
@@ -95,8 +114,11 @@
 
   &__image {
     object-position: center;
-    -o-object-fit: cover;
     object-fit: cover;
+
+    // @include bp-md {
+    //   object-fit: contain;
+    // }
   }
   &__project-name {
     color: $col-font;
@@ -123,6 +145,7 @@
   &__tags {
     display: inline-flex;
     align-items: center;
+    flex-wrap: wrap;
 
     & span {
       font-size: 0.625rem;
