--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,7 @@
 @import './components/hero-section';
 @import './components/about-me-section';
 @import './components/featured-projects-section';
+@import './components/testimonials-section';
 
 // HELPERS
 @import './helpers/animations';
