update image and video for about section

--- a/src/styles/components/_testimonials-section.scss
+++ b/src/styles/components/_testimonials-section.scss
@@ -1,5 +1,5 @@
 .comment {
-  // @include layout-margin;
+  @include layout-margin;
   padding-top: 6.5rem;
   padding-bottom: 8.12rem;
   @include bp-sm {
