--- a/src/styles/components/_featured-projects-section.scss
+++ b/src/styles/components/_featured-projects-section.scss
@@ -71,7 +71,6 @@
 
   &__media-wrap {
     width: 100%;
-    height: 400px;
     position: relative;
     transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
     -webkit-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
@@ -83,42 +82,51 @@
     -moz-border-radius: 0.9375rem;
     -ms-border-radius: 0.9375rem;
     -o-border-radius: 0.9375rem;
-
-    @include bp-md {
+  }
+  &__image {
+    object-fit: cover;
+    height: 600px;
+    @include bp-sm {
       height: 500px;
     }
   }
-  &__video,
-  &__image {
-    position: absolute;
-    top: 0;
-    left: 0;
+  &__video {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-    -webkit-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-    -moz-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-    -ms-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-    -o-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+    height: 300px;
+    @include bp-sm {
+      height: 500px;
+      object-fit: fill;
+      object-position: center;
+    }
+  }
+
+  &__image,
+  &__video {
     border-radius: 0.9375rem;
     -webkit-border-radius: 0.9375rem;
     -moz-border-radius: 0.9375rem;
     -ms-border-radius: 0.9375rem;
     -o-border-radius: 0.9375rem;
+    transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+    -webkit-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+    -moz-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+    -ms-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+    -o-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  &__video {
-    max-width: 100%;
+  &__image-mobile {
+    height: 100%;
+
+    @include bp-sm {
+      display: none;
+    }
   }
-
-  &__image {
-    object-position: center;
-    object-fit: cover;
-
-    // @include bp-md {
-    //   object-fit: contain;
-    // }
+  &__image-desktop {
+    display: none;
+    @include bp-sm {
+      display: block;
+      height: 100%;
+    }
   }
   &__project-name {
     color: $col-font;
