--- a/src/styles/components/_about-me-section.scss
+++ b/src/styles/components/_about-me-section.scss
@@ -49,11 +49,13 @@
     @include bp-md {
       height: auto;
       padding-bottom: 0;
+      width: 100%;
     }
   }
 
   &__icons-wrap {
     height: 100%;
+    width: 100%;
     display: inline-flex;
     justify-content: center;
     align-items: center;
