--- a/src/styles/components/_featured-projects-section.scss
+++ b/src/styles/components/_featured-projects-section.scss
@@ -60,12 +60,14 @@
     }
 
     &:hover .button--black-desktop {
+      backface-visibility: hidden;
       transform: translateY(0);
       -webkit-transform: translateY(0);
       -moz-transform: translateY(0);
       -ms-transform: translateY(0);
       -o-transform: translateY(0);
       opacity: 1;
+      -webkit-backface-visibility: hidden;
     }
   }
 
@@ -213,63 +215,4 @@
 
 .hide-video .featured__video {
   opacity: 0;
-}
-
-// .show-video {
-//   transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//   -webkit-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//   -moz-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//   -ms-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//   -o-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-
-//   .featured__image {
-//     opacity: 0;
-//     transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//     -webkit-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//     -moz-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//     -ms-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//     -o-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//   }
-
-//   .featured__video {
-//     opacity: 1;
-//     transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//     -webkit-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//     -moz-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//     -ms-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//     -o-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//   }
-// }
-// .hide-video {
-//   transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//   -webkit-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//   -moz-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//   -ms-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//   -o-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-
-//   .featured__image {
-//     opacity: 1;
-//     transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//     -webkit-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//     -moz-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//     -ms-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//     -o-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//   }
-
-//   .featured__video {
-//     opacity: 0;
-//     transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//     -webkit-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//     -moz-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//     -ms-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//     -o-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-//   }
-// }
-
-.m {
-  transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-  -webkit-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-  -moz-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-  -ms-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-  -o-transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
 }
