--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -54,6 +54,17 @@
       padding-bottom: 3.31rem;
       padding-top: 3.37rem;
     }
+
+    &:hover .button--black-desktop {
+      backface-visibility: hidden;
+      transform: translateY(0);
+      -webkit-transform: translateY(0);
+      -moz-transform: translateY(0);
+      -ms-transform: translateY(0);
+      -o-transform: translateY(0);
+      opacity: 1;
+      -webkit-backface-visibility: hidden;
+    }
   }
 
   &__image-container {
