--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -1,6 +1,10 @@
 .projects {
+  margin-bottom: 5rem;
+  @include bp-md {
+    margin-bottom: 7rem;
+  }
   &__header {
-    @include layout-margin;
+    @include layout-margin-sm;
     color: $col-font;
     font-size: 1.875rem;
     font-style: normal;
@@ -23,7 +27,7 @@
     text-align: center;
     margin-bottom: 1.13rem;
     padding-top: 1rem;
-    @include layout-margin;
+    @include layout-margin-sm;
     @include bp-sm {
       font-size: 2.75rem;
     }
@@ -41,12 +45,12 @@
   }
 
   &__inner {
-    display: grid;
+    display: grid !important;
     grid-template-columns: 1fr;
     gap: 1.5rem;
-    @include layout-margin;
     padding-bottom: 1.88rem;
     padding-top: 1.25rem;
+    @include layout-margin-sm;
 
     @include bp-sm {
       grid-template-columns: 2fr 1fr;
@@ -188,6 +192,56 @@
     @include bp-md {
       font-size: 1rem;
       line-height: 1.625rem;
+    }
+  }
+
+  // SLIDER DOTS CHANGES
+  .slick-dots {
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+
+    li {
+      width: 4rem;
+      height: 0.2rem;
+      margin: 0;
+      padding: 0;
+
+      & button {
+        width: 100%;
+        height: 100%;
+        background-color: #c0bab0;
+        opacity: 0.5;
+        border-radius: 20px;
+        -webkit-border-radius: 20px;
+        -moz-border-radius: 20px;
+        -ms-border-radius: 20px;
+        -o-border-radius: 20px;
+        padding: 0;
+
+        &:before {
+          content: '';
+        }
+      }
+    }
+  }
+
+  .slick-dots .slick-active {
+    background-color: $col-font;
+    width: 4rem;
+    height: 0.2rem;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+
+    button {
+      background-color: transparent;
+
+      &:before {
+        content: '';
+      }
     }
   }
 }
