--- a/src/styles/components/_featured-projects-section.scss
+++ b/src/styles/components/_featured-projects-section.scss
@@ -124,10 +124,11 @@
     }
   }
   &__image-desktop {
-    display: none;
+    // display: none;
+    display: block;
+    height: 100%;
     @include bp-sm {
-      display: block;
-      height: 100%;
+      height: 500px;
     }
   }
   &__project-name {
