--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -81,7 +81,7 @@
   &__image-container {
     @include border-radius(0.9375rem);
     width: 100%;
-    height: 450px;
+    height: 16.625rem;
     position: relative;
     overflow: hidden;
 
